todo-app/todo-app-backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-graphql-dep
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-graphql
  template:
    metadata:
      labels:
        app: todo-graphql
    spec:
      containers:
        - name: todo-graphql
          image: penao7/todo-graphql-backend
