todo-app/todo-app-backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-graphql-ingress
  namespace: todo-app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: todo-graphql
            port: 
              number: 4444
